--- a/Accounts List/Warnings.xcconfig
+++ b/Accounts List/Warnings.xcconfig
@@ -39,7 +39,7 @@ CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 CLANG_WARN_ASSIGN_ENUM = YES
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
-CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
+CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = NO
 CLANG_ANALYZER_SECURITY_FLOATLOOPCOUNTER = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_RAND = YES
 CLANG_ANALYZER_SECURITY_INSECUREAPI_STRCPY = YES
